# verilator-example

./: .gitignore  .gitmodules  BUCK  README.md  WORKSPACE
src/: BUCK.v2  BUILD  Makefile.OLD  example_active_ifc.sv  example_ifc.sv  example_passive_ifc.sv  example_vpi.cpp  hello_world.sv  sim_main.cpp
tb_rs/: Cargo.toml  README.md  build.rs  cbindgen.toml
tb_rs/src/: lib.rs
tb_rs/src/my_agent/: mod.rs  monitor.rs
tb_rs/src/verif/: agent.rs  configuration.rs  driver.rs  mod.rs  monitor.rs  sequencer.rs  tlm.rs
toolchains/: BUCK
utils/: get-nix-buck2-prelude_hash.py
